bugfix/extra spaces

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -5,5 +5,6 @@
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%; 
-     text-rendering: optimizeLegibility; 
+     text-rendering: optimizeLegibility;
+     margin: 0 auto;
 }
